# algol68g-mirror-depr

./: AUTHOR  CHANGE_LOG  ChangeLog  INSTALL  ISSUES  LIMITATIONS  Makefile.am  Makefile.bsd  Makefile.in  NEWS  README  READ_ME  THANKS  a68g-config.bsd.h  a68g-config.h  a68g-config.h.in  a68g-config.win32.h  a68g.1  a68g.c  a68g.h  aclocal.m4  changes.txt  check-01.a68  check-03.a68  check-05.a68  check-06.a68  check-08.a68  check-09.a68  code.c  configure  configure.ac  copying.txt  edit.c  environ.c  genie.c  gsl.c  inet.c  makefile  mips.c  monitor.c  (+8 more)
check/: check-02.a68  check-03.a68  check-04.a68  check-07.a68  check-08.a68  check-10.a68
demo/: decision.a68  euros.a68  fft.a68  gcd.a68  hamming.a68  hilbert.a68  lucas-lehmer.a68  lucas.a68  mandelbrot.a68  mastermind.a68  play.a68  quicksort.a68  rabin-miller.a68  sierpinski.a68  whetstone.a68
doc/: a68g.1  algol.html  configure  contents.html  description.html  dining.a68.html  drawing.html  environ.html  examples.html  extensions.html  hilbert.a68.html  install.html  introduction.html  knight.a68.html  license.html  mastermind.a68.html  mersenne.a68.html  numerical.html  postgresql.html  report_1.html  report_2.html  report_3.html  report_4.html  report_5.html  report_acknowledge.html  report_appendix.html  report_contents.html  report_glossaries.html  report_introduction.html  report_preface.html  resources.html  simpson.a68.html  synopsis.html  syntax.html  tarai.a68.html  thanks.html
doc/man1/: a68g.1
foreign/: READ_ME  y_openpl.c
source/: a68g-config.h  a68g-config.h.in  a68g-config.win32.h  a68g.c  a68g.h  acronym.c  algol68g.c  algol68g.h  code.c  coercion.c  compiler.c  complex.c  config.h  diagnostics.c  diagnostics.h  edit.c  engine.c  environ.c  environ.h  extensions.c  generator.c  genie.c  genie.h  gsl.c  gsl.h  help.c  http.c  inet.c  inline.h  interpreter.c  interpreter.h  io.c  listing.c  makefile  math.c  mips.c  moids.c  monitor.c  mp.c  mp.h  (+25 more)
src/a68g/: a68g-apropos.c  a68g-bits.c  a68g-conversion.c  a68g-diagnostics.c  a68g-io.c  a68g-keywords.c  a68g-listing.c  a68g-mem.c  a68g-non-terminal.c  a68g-options.c  a68g-path.c  a68g-postulates.c  a68g-pretty.c  a68g.c  a68glib.c  apropos.c  bits.c  bool.c  bottom-up.c  brackets.c  char.c  compiler-inline.c  compiler-tables.c  compiler.c  conversion.c  curses.c  diagnostics.c  double-gamic.c  double-math.c  double.c  enquiries.c  environ.c  equivalence.c  extract.c  fft.c  format.c  genie-coerce.c  genie-misc.c  genie-regex.c  genie-rows.c  (+108 more)
src/include/: a68g-common.h  a68g-compiler.h  a68g-config.win32.h  a68g-defines.h  a68g-diagnostics.h  a68g-double.h  a68g-enums.h  a68g-environ.h  a68g-frames.h  a68g-generic.h  a68g-genie.h  a68g-includes.h  a68g-level-3.h  a68g-lib.h  a68g-listing.h  a68g-masks.h  a68g-math.h  a68g-moids.h  a68g-mp.h  a68g-nil.h  a68g-numbers.h  a68g-optimiser.h  a68g-options.h  a68g-parser.h  a68g-physics.h  a68g-platform.h  a68g-plugin.h  a68g-postulates.h  a68g-prelude-gsl.h  a68g-prelude-mathlib.h  a68g-prelude.h  a68g-quad.h  a68g-stack.h  a68g-stddef.h  a68g-torrix.h  a68g-transput.h  a68g-types.h  a68g.h
test-set/: 0001.mc31.appl01.a68  0002.mc31.appl02.a68  0003.mc31.appl03.a68  0004.mc31.appl04.a68  0005.mc31.appl05.a68  0006.mc31.appl06.a68  0007.mc31.appl07.a68  0008.mc31.appl08.a68  0009.mc31.appl09.a68  0010.mc31.appl10.a68  0011.mc31.appl11.a68  0012.mc31.appl12.a68  0013.mc31.appl13.a68  0014.mc31.appl14.a68  0015.mc31.appl15.a68  0016.mc31.appl16.a68  0017.mc31.appl17.a68  0018.mc31.appl18.a68  0019.mc31.appl19.a68  0020.mc31.clau01.a68  0021.mc31.clau02.a68  0022.mc31.clau03.a68  0023.mc31.clau04.a68  0024.mc31.clau05.a68  0025.mc31.clau06.a68  0026.mc31.clau07.a68  0027.mc31.clau08.a68  0028.mc31.clau09.a68  0029.mc31.coer01.a68  0030.mc31.coer02.a68  0031.mc31.coer03.a68  0032.mc31.coer04.a68  0033.mc31.coer05.a68  0034.mc31.coer06.a68  0035.mc31.coer07.a68  0036.mc31.coer08.a68  0037.mc31.coer09.a68  0038.mc31.coer10.a68  0039.mc31.coer11.a68  0040.mc31.coer13.a68  (+566 more)
